== 0.4 ==
2008-04-01  Don Scorgie  <Don@Scorgie.org>

	* configure.ac:
	* NEWS:
	Version 0.4.0

	* Windows/WinSetup.bat:
	Updates for new Windows build
	
2008-04-01 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Critical bug fixed. Couldn't deselect after selecting with box.
	
2008-03-31 Martin Schaaf <mascha@ma-scha.de>

	* configure.ac
	* debian/changelog
	Bump version to 0.4.0.

2008-03-29 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	* src/utils.py
	* data/labyrinth.glade
	Sync with trunk.

2008-03-28 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Fix Issue 80 doing correct undo move.
	* po/de.po
	* po/labyrinth.pot
	Update german translation.

2008-03-28 Martin Schaaf <mascha@ma-scha.de>

	* src/labyrinth.py
	o check for pygtk version before gtk is imported like it is
	said in the pygtk FAQ, fixes Issue 82

2008-03-28 Martin Schaaf <mascha@ma-scha.de>

	* configure.ac
	* debian/changelog
	o bumb version to 0.4.0rc7

2008-03-28 Martin Schaaf <mascha@ma-scha.de>

	* src/Makefile.am
	o add missing file for distribution creation

2008-03-27 Martin Schaaf <mascha@ma-scha.de>

	* src/MapList.py
	o fix renaming of thought
	* src/Browser.py
	o raise a AttributeError instead of a deprecated String

2008-03-27 Martin Schaaf <mascha@ma-scha.de>

	* configure.ac
	* debian/changelog
	o bumb version to 0.4.0rc6

2008-03-27 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Sync with trunk. Added selection box.

2008-03-25 Martin Schaaf <mascha@ma-scha.de>

	* src/TextThought.py
	* src/MMapArea.py
	* src/BaseThought.py
	* src/MainWindow.py
	* src/TextBufferMarkup.py
	o add font selection support for thoughts, fixes issue 79
	o change attributes instead of inserting, fixes hopefully issue 53

2008-03-25 Martin Schaaf <mascha@ma-scha.de>

	* configure.ac
	* debian/changelog
	o bumb version to 0.4.0rc5

2008-03-25 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>
